# pypi-license-detection

./: .gitignore  .pre-commit-config.yaml  README.md  broken_packages.txt  pyproject.toml  requirements-DEVELOPMENT.txt  requirements.txt  requirements.txt_pypi_resolved.txt  requirements_minimum.txt  requirements_minimum.txt_pypi_resolved.txt  requirements_short.txt_pypi_resolved.txt  requirements_wttr.in.txt  requirements_wttr.in.txt_pypi_resolved.txt  setup.cfg  testPackages.txt  vulnerabilities.pypi.txt
src/fasten/: __main__.py  analyzeFastenLicenseInformation.py  cg_producer.py  checkPackageAvailability.py  cli.py  collectingGeneratedAndRetrievedCallGraphs.py  createAdjacencyList.py  createCallGraph.py  createDependenciesDictionary.py  createDirectories.py  createDirectory.py  depthFirstSearch.py  enrichCallGraph.py  enrichOSCG.py  executeCallGraphGenerator.py  executePypiResolver.py  fasten.py  findEntrypoints.py  gitHubAndPyPIParsingUtils.py  gitHubParsingUtils.py  licenseComplianceVerification.py  licensesAnalysis.py  licensesApplicationToTheStitchedCallGraph.py  licensesAtTheFileLevel.py  main.py  optimizeStitchedCallGraph.py  pypiPluginUtils.py  pypiResolver.py  readRequirementsFile.py  receiveCallGraphs.py  reportToPDF.py  requestFasten.py  requestFastenKnownAndUnknownLists.py  requestFastenKnownAndUnknownListsMockup.py  requestFastenLicenseInformation.py  requirements.txt  retrieveLicenseInformation.py  retrieveLicensesAtTheFileLevel.py  retrieveLocallyLicensesInformation.py  savePackageInformation.py  (+6 more)
src/fasten/StitchedCallGraph/: fabric.json  oscg.json  pypiPlugin-test-online.json  testGraph.json  testSCG.json
src/fasten/callGraphs/: attrs-21.4.0.json  cryptography-3.4.7.json  fabric-2.6.0.json  fasten-pypi-plugin.json  importlib-metadata-4.11.4.json  more-itertools-8.13.0.json  packaging-21.3.json  pipup.json  python-webservice.json  zipp-3.8.0.json
src/fasten/directoryName/callgraphs/a/atomicwrites/1.4.0/: atomicwrites-1.4.0.json
src/fasten/directoryName/callgraphs/a/attrs/21.4.0/: attrs-21.4.0.json
src/fasten/directoryName/callgraphs/c/click/7.0/: click-7.0.json
src/fasten/directoryName/callgraphs/d/docopt/0.6.2/: docopt-0.6.2.json
src/fasten/directoryName/callgraphs/f/first/2.0.1/: first-2.0.1.json
src/fasten/directoryName/callgraphs/i/importlib-metadata/4.11.4/: importlib-metadata-4.11.4.json
src/fasten/directoryName/callgraphs/p/pluggy/0.13.1/: pluggy-0.13.1.json
src/fasten/directoryName/callgraphs/p/pyparsing/3.0.9/: pyparsing-3.0.9.json
src/fasten/directoryName/callgraphs/s/six/1.10.0/: six-1.10.0.json
src/fasten/directoryName/callgraphs/w/wcwidth/0.2.5/: wcwidth-0.2.5.json
src/fasten/directoryName/callgraphs/w/wheel/0.23.0/: wheel-0.23.0.json
src/fasten/directoryName/callgraphs/y/yarg/0.1.9/: yarg-0.1.9.json
src/fasten/directoryName/callgraphs/z/zipp/3.8.0/: zipp-3.8.0.json
src/fasten/fasten-restapi-mockup/: files.json  metadata.json
src/fasten/pipup/: requirements.txt_pypi_resolved.txt
tests/: cli.py
