[metadata]
name = fasten
version = 0.0.1
description = A tool to analyze and report issues about a module dependencies.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ingrid Sena
author_email = info@endocode.com # TODO: double check the email address
maintainer = The FASTEN developers
maintainer_email = pypi@fasten-project.eu # TODO: double check the email address

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

license = Apache Software License 2.0
license_file = LICENSE
keywords = fasten, dependency management
project_urls =
    Homepage = https://www.fasten-project.eu
    Source = https://github.com/fasten-project/fasten-pypi-plugin
    # Documentation = https://tbd/

[options]
package_dir=
    =src
packages=find:
include_package_data = true
python_requires = >=3.5
install_requires =
    click >= 7.0

[options.entry_points]
console_scripts =
    fasten=fasten.cli:cli

[options.packages.find]
where = src
exclude = *.tests

[options.extras_require]
test =
    pytest>=4
typing =
    mypy==0.790
    typing-extensions>=3.7.4.3

[bdist_wheel]
universal = 1

[pytest]
markers =
    isolated

[black]
line-length = 127
skip-string-normalization = true
target-version = ['py39', 'py38', 'py37', 'py36', 'py35']

[isort]
profile = "black"
lines_between_types = 1
lines_after_imports = 2
line_length = 127
known_first_party = "build"
skip = []  # "build" is included in the default skip list

[flake8]
max-line-length = 88
exclude =
    docs,
    ./build,
    .nox,
    .tox,
    .scratch,
    _vendor,
    data
enable-extensions = G
extend-ignore =
    G200, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # G: The plugin logging-format treats every .log and .error as logging.
    noxfile.py: G
    # B011: Do not call assert False since python -O removes these calls
    tests/*: B011

[mypy]
follow_imports = silent
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_any_generics = True
warn_unused_ignores = True

[coverage:run]
omit =
    setup.py
    *bin/pyproject-build
    *bin\pyproject-build.exe

[coverage:report]
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise NotImplementedError\b

[coverage:paths]
source =
    src
    */site-packages
    *\site-packages

[coverage:html]
show_contexts = true