[metadata]
name = fasten
version = 0.0.1
author = Martin Pauling
author_email = martin.pauling@endocode.com
description = fasten-pypi-plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fasten-project/fasten-pypi-plugin
project_urls =
    Bug Tracker = https://github.com/fasten-project/fasten-pypi-plugin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    fasten=fasten.__main__:main

[options.packages.find]
where = src
